<resources>
    <string name="app_name">World Metrics</string>
    <string name="about_me">About me</string>
    <string name="confirm">Confirm</string>
    <string name="copied_format">Copied: %1$s</string>
    <string name="copy">Copy</string>
    <string name="country_name">Country name</string>
    <string name="your_country_is">Your country is: </string>
    <string name="question_is_your_country">Is your country - %1$s?</string>
    <string name="consider_searching_your_country">Consider searching your country</string>

    <string name="country_detect_by_gps">by GPS</string>
    <string name="country_detect_by_network">by Network</string>
    <string name="country_detect_manually">select</string>
    <string name="failed_to_detect_country">Failed to detect country</string>

    <string name="to_be_implemented">To be implemented</string>
    <string name="global_lookup">Global lookup</string>

    <string name="main">Main</string>
    <string name="all_data">All data</string>
    <string name="compare">Compare</string>

    <string name="about">About us</string>
    <string name="credits">Credits</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="question_allow_gps_access">Allow Network access?</string>
    <string name="question_allow_network_access">Allow Network access?</string>
    <string name="country_detection_permission_explanation">We need your permission to locate country</string>

    <string name="transition_name_target_screen">transition_name_target_screen</string>
    <string name="transition_name_pattern_list_item">transition_name_pattern_list_item_%1$s</string>
    <string name="transition_name_pattern_country_name">transition_name_pattern_country_name_%1$s</string>
    <string name="transition_name_country_name_detail">transition_name_country_name_detail</string>

    <string name="no_data">No data</string>
</resources>