<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_info"
        android:title="@string/main"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_global_overview"
                android:icon="@drawable/ic_global"
                android:title="@string/all_data"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/menu_item_compare"
                android:icon="@drawable/ic_difference"
                android:title="@string/compare"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:title="@string/about"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_item_credits"
                android:icon="@drawable/ic_person"
                android:title="@string/credits"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>